manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubefill
  labels:
    name: kubefill
