manifests/core-install.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubefill-postgres
  name: kubefill-postgres
spec:
  selector:
    matchLabels:
      app: kubefill-postgres
  template:
    metadata:
      labels:
        app: kubefill-postgres
      name: kubefill-postgres
    spec:
      containers:
      - name: main
        image: postgres:12-alpine
        ports:
          - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - psql
            - -U
            - postgres
            - -c
            - SELECT 1
          initialDelaySeconds: 15
          timeoutSeconds: 2
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubefill-postgres
  name: kubefill-postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: kubefill-postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubefill-repo-server
  labels:
    app: kubefill-repo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubefill-repo-server
  template:
    metadata:
      labels:
        app: kubefill-repo-server
    spec:
      containers:
        - name: kubefill-repo-server
          image: kubefill/kubefill:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          command:
            - kubefill-reposerver
          volumeMounts:
            - mountPath: /home/kubefill/ssh
              name: ssh-persistent-storage
            - mountPath: /home/kubefill/repos
              name: repos-persistent-storage
      volumes:
        - name: ssh-persistent-storage
          persistentVolumeClaim:
            claimName: kubefill-ssh-pv-claim
        - name: repos-persistent-storage
          persistentVolumeClaim:
            claimName: kubefill-repos-pv-claim

---
apiVersion: v1  
kind: Service
metadata:
  name: kubefill-repo-server
  labels:
    app: kubefill-repo-server
spec:
  type: NodePort
  selector:
    app: kubefill-repo-server
  ports:
  - name: http
    port: 8081
    targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubefill-server
  labels:
    app: kubefill-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubefill-server
  template:
    metadata:
      labels:
        app: kubefill-server
    spec:
      containers:
      - name: kubefill-server
        image: kubefill/kubefill:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        command:
        - kubefill-server
      serviceAccountName: kubefill-server

---
apiVersion: v1  
kind: Service
metadata:
  name: kubefill-server
  labels:
    app: kubefill-server
spec:
  type: NodePort
  selector:
    app: kubefill-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
