manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubefill-server-ingress
  namespace: kubefill
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - DOMAIN_NAME
      secretName: SECRET_NAME
  rules:
    - host: DOMAIN_NAME
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubefill-server
                port:
                  number: 8080
